fix: use top level entry

--- a/packages/vue-shining-text/package.json
+++ b/packages/vue-shining-text/package.json
@@ -5,14 +5,12 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./index.mjs"
     }
   },
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "index.mjs"
   ],
   "scripts": {
     "build": "unbuild"
