chore: update readme

--- a/packages/vue-shining-text/package.json
+++ b/packages/vue-shining-text/package.json
@@ -22,7 +22,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "vue": "^3.3.4"
   },
